Temp testing marching cubes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,9 @@
     "xlocbuf": "cpp",
     "xlocmes": "cpp",
     "xlocmon": "cpp",
-    "xloctime": "cpp"
+    "xloctime": "cpp",
+    "span": "cpp",
+    "variant": "cpp"
   },
   "cmake.configureOnOpen": true
 }
